src/main/java/com/example/test/omnivore2trendithon2025/global/error/exception/InvalidGroupException.java
package com.example.test.omnivore2trendithon2025.global.error.exception;

public abstract class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
